--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["es2015", "react"]
+  "env": {
+    "production": {
+      "presets": ["es2015", "react", "stage-1"]
+    },
+    "development": {
+      "presets": ["es2015", "react", "stage-1"],
+      "plugins": ["styled-jsx/babel"]
+    }
+  }
 }
