--- a/package.json
+++ b/package.json
@@ -1,37 +1,33 @@
 {
-  "name": "example-ui-lib",
+  "name": "ui",
   "version": "1.0.0",
-  "description": "An example of a react component library",
-  "main": "build/index.js",
+  "description": "",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "babel lib -d build",
-    "build:watch": "babel lib -w -d build",
-    "lint": "eslint lib/**; exit 0",
-    "lint:watch": "esw -w lib/**",
-    "prepublish": "npm run build"
+    "clean-dist": "rm -rf ./dist",
+    "build": "yarn run clean-dist && NODE_ENV=production `yarn bin`/babel ./src --out-dir ./dist"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/florlafuente/ui-lib-example.git"
   },
+  "keywords": [],
   "author": "Florencia Lafuente <lafuente.florencia@gmail.com> (https://github.com/florlafuente)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/florlafuente/ui-lib-example/issues"
   },
   "homepage": "https://github.com/florlafuente/ui-lib-example#readme",
-  "devDependencies": {
+  "peerDependencies": {
+    "react": "^15.x",
+    "styled-components": "^1.x"
+  },
+  "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^5.4.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-watch": "^4.0.2",
-    "prop-types": "^15.6.2",
+    "babel-preset-stage-1": "^6.24.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "styled-components": "^3.4.4"
