--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,7 @@
       "presets": ["es2015", "react", "stage-1"]
     },
     "development": {
-      "presets": ["es2015", "react", "stage-1"],
-      "plugins": ["styled-jsx/babel"]
+      "presets": ["es2015", "react", "stage-1"]
     }
   }
 }
