--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "clean-dist": "rm -rf ./dist",
-    "build": "yarn run clean-dist && NODE_ENV=production `yarn bin`/babel ./src --out-dir ./dist"
+    "build": "yarn run clean-dist && NODE_ENV=production `yarn bin`/babel ./src --out-dir ./dist",
+    "storybook": "start-storybook -p 9000",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -31,5 +33,12 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "styled-components": "^3.4.4"
+  },
+  "devDependencies": {
+    "@storybook/react": "^3.4.10",
+    "@storybook/addon-actions": "^3.4.10",
+    "@storybook/addon-links": "^3.4.10",
+    "@storybook/addons": "^3.4.10",
+    "babel-runtime": "^6.26.0"
   }
 }
