--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean-dist": "rm -rf ./dist",
     "build": "yarn run clean-dist && NODE_ENV=production `yarn bin`/babel ./src --out-dir ./dist",
-    "storybook": "start-storybook -p 9000",
+    "storybook": "start-storybook -p 9001 -c .storybook",
     "build-storybook": "build-storybook"
   },
   "repository": {
@@ -20,25 +20,19 @@
     "url": "https://github.com/florlafuente/ui-lib-example/issues"
   },
   "homepage": "https://github.com/florlafuente/ui-lib-example#readme",
-  "peerDependencies": {
-    "react": "^15.x",
-    "styled-components": "^1.x"
-  },
-  "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "styled-components": "^3.4.4"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "styled-components": "^1.0.10",
+    "@storybook/react": "^3.2.3"
   },
-  "devDependencies": {
-    "@storybook/react": "^3.4.10",
-    "@storybook/addon-actions": "^3.4.10",
-    "@storybook/addon-links": "^3.4.10",
-    "@storybook/addons": "^3.4.10",
-    "babel-runtime": "^6.26.0"
+  "peerDependencies": {
+    "react": "^15.x",
+    "styled-components": "^1.x"
   }
 }
